--- a/config/database.yml
+++ b/config/database.yml
@@ -10,22 +10,26 @@
 #   https://dev.mysql.com/doc/refman/5.7/en/password-hashing.html
 #
 default: &default
-  adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  username: root
-  password:
-  socket: /tmp/mysql.sock
 
 development:
   <<: *default
-  database: protospace_38420_development
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
+  database: protospace-38420_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  adapter: mysql2
+  username: root
+  password:
+  host: localhost
   database: protospace_38420_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
@@ -49,6 +53,5 @@ test:
 #
 production:
   <<: *default
-  database: protospace_38420_production
-  username: protospace_38420
-  password: <%= ENV['PROTOSPACE_38420_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  url: <%= ENV['DATABASE_URL'] %>
